fix(iOS): crash on VoiceOver enabled and role not set

--- a/demo/src/home/home.component.html
+++ b/demo/src/home/home.component.html
@@ -7,7 +7,7 @@
         <Label text="You need to enable VoiceOver" textWrap="true"></Label>
       </StackLayout>
       <StackLayout class="text-center h1 screen-reader a11y-service-enabled-visible">
-        <Label text="VoiceOver enabled" textWrap="true"></Label>
+        <Label text="VoiceOver enabled" textWrap="true"  accessible="true" accessibilityRole="radiobutton" accessibilityState="checked"></Label>
       </StackLayout>
     </ios>
 
