update to theme 2.0

--- a/src/scss/a11y.ios.scss
+++ b/src/scss/a11y.ios.scss
@@ -2,12 +2,4 @@
 @import 'a11y-helpers';
 
 // iOS specific styling
-@import 'ios/action-bar';
-@import 'ios/buttons';
-@import 'ios/forms';
-@import 'ios/labels';
-@import 'ios/list-view';
-@import 'ios/login';
-@import 'ios/segmented-bar';
-@import 'ios/login';
-@import 'ios/utilities/text';
+@import 'ios/index';
