chore: use new css-variables and css-calc for the a11y-theme

--- a/src/scss/ios/core/_headings.scss
+++ b/src/scss/ios/core/_headings.scss
@@ -1,55 +1,37 @@
 $a11y-label-classes: (
   h1: (
     font-size: 32,
-    scales: $a11y-font-scales,
   ),
   h2: (
     font-size: 22,
-    scales: $a11y-font-scales,
   ),
   h3: (
     font-size: 15,
-    scales: $a11y-font-scales,
   ),
   h4: (
     font-size: 12,
-    scales: $a11y-font-scales,
   ),
   h5: (
     font-size: 11,
-    scales: $a11y-font-scales,
   ),
   h6: (
     font-size: 10,
-    scales: $a11y-font-scales,
   ),
   body: (
     font-size: 14,
-    scales: $a11y-font-scales,
   ),
   body2: (
     font-size: 17,
-    scales: $a11y-font-scales,
   ),
   footnote: (
     font-size: 13,
-    scales: $a11y-font-scales,
   ),
 ) !default;
 
 @each $label-class, $values in $a11y-label-classes {
-  $scales: map-get($values, scales);
   $a11y-font-size: map-get($values, font-size);
 
   .#{$label-class} {
-    @each $scaleName, $params in $scales {
-      $factor: map-get($params, factor);
-
-      @if $factor != 1 {
-        &.ayfs-#{$scaleName} {
-          font-size: $a11y-font-size * $factor;
-        }
-      }
-    }
+    font-size: calc(#{$a11y-font-size} * var(--a11y-fontscale-factor, 1));
   }
 }
