--- a/src/scss/ios/core/_index.scss
+++ b/src/scss/ios/core/_index.scss
@@ -1,9 +1,6 @@
-// Core vars
-@import 'nativescript-theme-core/scss/variables';
-
 // Utilities
-@import 'utilities/index';
+@import './utilities/index';
 
-@import 'headings';
-@import 'utilities';
-@import 'controls';
+@import './headings';
+@import './utilities';
+@import './controls';
