--- a/src/scss/ios/core/utilities/_index.scss
+++ b/src/scss/ios/core/utilities/_index.scss
@@ -1,20 +1,5 @@
 @import 'text';
 
-@each $scaleName, $params in $a11y-font-scales {
-  $factor: map-get($params, factor);
-
-  @if $factor != 1 {
-    .ns-root {
-      $ns-root-font-size: 14;
-      &.ayfs-#{$scaleName} {
-        font-size: $ns-root-font-size * $factor;
-      }
-    }
-    .ns-ios {
-      $ns-ios-font-size: 15;
-      &.ayfs-#{$scaleName} {
-        font-size: $ns-ios-font-size * $factor;
-      }
-    }
-  }
+@at-root .ns-ios {
+  font-size: calc(15 * var(--a11y-fontscale-factor, 1));
 }
