--- a/src/scss/ios/core/_controls.scss
+++ b/src/scss/ios/core/_controls.scss
@@ -1,139 +1,69 @@
 ActionBar,
 NTActionBar,
 .nt-action-bar {
-  $action-bar-font-size: 17;
-  $action-bar-item-font-size: 15;
+  .action-bar-title {
+    font-size: calc(17 * var(--a11y-fontscale-factor, 1));
+  }
 
-  @each $scaleName, $params in $a11y-font-scales {
-    $factor: map-get($params, factor);
-
-    @if $factor != 1 {
-      &.ayfs-#{$scaleName} {
-        .action-bar-title {
-          font-size: $action-bar-font-size * $factor;
-        }
-
-        NTIcon,
-        label,
-        button,
-        .nt-action-bar__item {
-          font-size: $action-bar-item-font-size * $factor;
-        }
-      }
-    }
+  NTIcon,
+  label,
+  button,
+  .nt-action-bar__item {
+    font-size: calc(15 * var(--a11y-fontscale-factor, 1));
   }
 }
 
 button,
 .nt-button {
-  @each $scaleName, $params in $a11y-font-scales {
-    $factor: map-get($params, factor);
-
-    @if $factor != 1 {
-      &.ayfs-#{$scaleName} {
-        font-size: $btn-font-size * $factor;
-      }
-    }
-  }
+  // $btn-font-size: 18 in nativescript-theme-core
+  font-size: calc(18 * var(--a11y-fontscale-factor, 1));
 }
 
 label,
 .nt-label {
-  $label-font-size: 14;
-  @each $scaleName, $params in $a11y-font-scales {
-    $factor: map-get($params, factor);
-
-    @if $factor != 1 {
-      &.ayfs-#{$scaleName} {
-        font-size: $label-font-size * $factor;
-      }
-    }
-  }
+  font-size: calc(14 * var(--a11y-fontscale-factor, 1));
 }
 
 SegmentedBar,
 .nt-segmented-bar {
-  $segmented-bar-font-size: 13;
-  $segmented-bar-height: 30;
-
-  height: $segmented-bar-height;
-  @each $scaleName, $params in $a11y-font-scales {
-    $factor: map-get($params, factor);
-
-    @if $factor != 1 {
-      &.ayfs-#{$scaleName} {
-        font-size: $segmented-bar-font-size * $factor;
-        height: $segmented-bar-height * $factor;
-      }
-    }
-  }
+  font-size: calc(13 * var(--a11y-fontscale-factor, 1));
+  height: calc(30 * var(--a11y-fontscale-factor, 1));
 }
 
 ListView,
 RadListView,
 .nt-list-view {
-  $list-view-item-font-size: 16;
-  $list-view-nt-icon-font-size: 20;
+  > * {
+    font-size: calc(16 * var(--a11y-fontscale-factor, 1));
+  }
 
-  @each $scaleName, $params in $a11y-font-scales {
-    $factor: map-get($params, factor);
-
-    @if $factor != 1 {
-      &.ayfs-#{$scaleName} {
-        > * {
-          font-size: $list-view-item-font-size * $factor;
-        }
-
-        NTIcon,
-        .nt-icon {
-          font-size: $list-view-nt-icon-font-size * $factor;
-        }
-      }
-    }
+  NTIcon,
+  .nt-icon {
+    font-size: calc(20 * var(--a11y-fontscale-factor, 1));
   }
 }
 
 RadSideDrawer,
 .nt-drawer {
-  $rad-draw-header-inner-font-size: 16;
-  $rad-draw-header-font-size: 40;
-  $rad-draw-brand-font-size: 15;
-  @each $scaleName, $params in $a11y-font-scales {
-    $factor: map-get($params, factor);
+  .nt-drawer__header {
+    label {
+      font-size: calc(16 * var(--a11y-fontscale-factor, 1));
+    }
 
-    @if $factor != 1 {
-      &.ayfs-#{$scaleName} {
-        .nt-drawer__header {
-          label {
-            font-size: $rad-draw-header-inner-font-size * $factor;
-          }
+    > label {
+      font-size: calc(40 * var(--a11y-fontscale-factor, 1));
+    }
 
-          > label {
-            font-size: $rad-draw-header-font-size * $factor;
-          }
-
-          &-brand {
-            font-size: $rad-draw-brand-font-size * $factor;
-          }
-        }
-      }
+    &-brand {
+      font-size: calc(15 * var(--a11y-fontscale-factor, 1));
     }
   }
 }
 
 form,
 .nt-form {
-  $form-title-font-size: 18;
-
-  @each $scaleName, $params in $a11y-font-scales {
-    $factor: map-get($params, factor);
-    @if $factor != 1 {
-      &.ayfs-#{$scaleName} {
-        .nt-form__title {
-          font-size: $form-title-font-size * $factor;
-        }
-      }
-    }
+  .nt-form__title {
+    font-size: calc(18 * var(--a11y-fontscale-factor, 1));
   }
 }
 
@@ -144,39 +74,17 @@ DatePickerField,
 TimePickerField,
 DateTimePickerFields,
 DataFormEditorCore {
-  $form-field-font-size: 15;
-  @each $scaleName, $params in $a11y-font-scales {
-    $factor: map-get($params, factor);
-
-    @if $factor != 1 {
-      &.ayfs-#{$scaleName} {
-        font-size: $form-field-font-size * $factor;
-      }
-    }
-  }
+  font-size: calc(15 * var(--a11y-fontscale-factor, 1));
 }
 
 NTInput,
 .nt-input {
-  $form-input-font-size: 16;
-  $form-input-icon-font-size: 24;
+  > label {
+    font-size: calc(16 * var(--a11y-fontscale-factor, 1));
+  }
 
-  @each $scaleName, $params in $a11y-font-scales {
-    $factor: map-get($params, factor);
-
-    @if $factor != 1 {
-      > label {
-        &.ayfs-#{$scaleName} {
-          font-size: $form-input-font-size * $factor;
-        }
-      }
-
-      & > NTIcon,
-      & > .nt-icon {
-        &.ayfs-#{$scaleName} {
-          font-size: $form-input-icon-font-size * $factor;
-        }
-      }
-    }
+  & > NTIcon,
+  & > .nt-icon {
+    font-size: calc(24 * var(--a11y-fontscale-factor, 1));
   }
 }
