--- a/demo/src/home/home.component.html
+++ b/demo/src/home/home.component.html
@@ -1,32 +1,34 @@
 <ActionBar title="{N} accessibility demo" accessibilityLabel="{N} accessibility demo" class="action-bar"></ActionBar>
 
-<GridLayout class="p-b-10 p-t-10" rows="auto, *" columns="*">
-  <StackLayout row="0">
+<GridLayout class="p-b-10 p-t-10" rows="auto, auto, *" columns="*">
+  <StackLayout row="0" class="c-white c-bg-grey font-weight-bold screen-reader">
     <ios>
-      <StackLayout class="text-center h1 screen-reader a11y-service-enabled-hidden">
-        <Label text="You need to enable VoiceOver" textWrap="true"></Label>
+      <StackLayout class="text-center a11y-service-enabled-hidden">
+        <Label text="You need to enable VoiceOver" textWrap="true" class="h1"></Label>
       </StackLayout>
-      <StackLayout class="text-center h1 screen-reader a11y-service-enabled-visible">
-        <Label text="VoiceOver enabled" textWrap="true" class="screen-reader-enabled"></Label>
+      <StackLayout class="text-center a11y-service-enabled-visible">
+        <Label text="VoiceOver enabled" textWrap="true" class="h1 screen-reader-enabled"></Label>
       </StackLayout>
     </ios>
 
     <android>
-      <StackLayout class="text-center h1 screen-reader a11y-service-enabled-hidden">
-        <Label text="You need to enable TalkBack" textWrap="true"></Label>
+      <StackLayout class="text-center a11y-service-enabled-hidden">
+        <Label text="You need to enable TalkBack" textWrap="true" class="h1"></Label>
       </StackLayout>
-      <StackLayout class="text-center h1 screen-reader a11y-service-enabled-visible">
-        <Label text="TalkBack enabled" textWrap="true" class="screen-reader-enabled"></Label>
+      <StackLayout class="text-center a11y-service-enabled-visible">
+        <Label text="TalkBack enabled" textWrap="true" class="h1 screen-reader-enabled"></Label>
       </StackLayout>
     </android>
-    <slider minValue="0" maxValue="100" value="50" accessible="true" accessibilityStep="5" (accessibilityFocus)="onAccessibilityFocus($event)"></slider>
   </StackLayout>
-  <ListView row="1" [items]="source" class="list-group">
+
+  <slider row="1" minValue="0" maxValue="100" value="50" accessible="true" accessibilityStep="5" (accessibilityFocus)="onAccessibilityFocus($event)"></slider>
+
+  <ListView row="2" [items]="source">
     <ng-template let-item="item" let-index="index" let-odd="odd" let-even="even">
       <StackLayout
         [class.odd]="odd"
         [class.even]="even"
-        class="list-group-item"
+        class="list-view-item"
         [accessibilityLabel]="item.name"
         (accessibilityFocus)="onAccessibilityFocus($event, index)"
         (tap)="itemTap(item)"
