feat(Label): Removed accessibilityAdjustsFontSize
accessibilityAdjustsFontSize is too buggy and requires too much
maintainess. Developers should use css instead.

BREAKING CHANGE: Users of accessibilityAdjustsFontSize have to switch to css-classes instead.

--- a/demo/src/home/home.component.html
+++ b/demo/src/home/home.component.html
@@ -7,7 +7,7 @@
         <Label text="You need to enable VoiceOver" textWrap="true" class="h1"></Label>
       </StackLayout>
       <StackLayout class="text-center a11y-service-enabled-visible">
-        <Label text="VoiceOver enabled" textWrap="true" class="h1 screen-reader-enabled"></Label>
+        <Label text="VoiceOver enabled" textWrap="true" class="h1"></Label>
       </StackLayout>
     </ios>
 
@@ -16,7 +16,7 @@
         <Label text="You need to enable TalkBack" textWrap="true" class="h1"></Label>
       </StackLayout>
       <StackLayout class="text-center a11y-service-enabled-visible">
-        <Label text="TalkBack enabled" textWrap="true" class="h1 screen-reader-enabled"></Label>
+        <Label text="TalkBack enabled" textWrap="true" class="h1"></Label>
       </StackLayout>
     </android>
   </StackLayout>
