--- a/demo/app/app.ios.scss
+++ b/demo/app/app.ios.scss
@@ -1,7 +1,7 @@
 // Import app variables
 @import 'app-variables';
 
-// Import the theme’s main ruleset - both index and platform specific.
+// Import the theme’s main rule-set - both index and platform specific.
 @import '~nativescript-theme-core/scss/index';
 @import '~nativescript-theme-core/scss/platforms/index.ios';
 @import '~@nota/nativescript-accessibility-ext/scss/a11y.ios'; // <-- add this line
