--- a/src/scss/a11y-helpers.scss
+++ b/src/scss/a11y-helpers.scss
@@ -1,36 +1,107 @@
+@import './fontscales';
+
 .a11y-service-disabled {
-  &.a11y-service-enabled-visible,
-  &.a11y-service-disabled-hidden {
+  .a11y-service-enabled-visible,
+  .a11y-service-disabled-hidden {
     visibility: collapse;
   }
 }
 
 .a11y-service-enabled {
-  &.a11y-service-enabled-hidden,
-  &.a11y-service-disabled-hidden {
+  .a11y-service-enabled-hidden,
+  .a11y-service-disabled-hidden {
     visibility: collapse;
   }
 }
 
 .a11y-fontscale-xs {
-  &.a11y-fontscale-xs-hidden,
-  &.a11y-fontscale-xl-visible {
+  .a11y-fontscale-xs-hidden,
+  .a11y-fontscale-xl-visible {
     visibility: collapse;
   }
 }
 
 .a11y-fontscale-m {
-  &.a11y-fontscale-m-hidden,
-  &.a11y-fontscale-xs-visible,
-  &.a11y-fontscale-xl-visible {
+  .a11y-fontscale-m-hidden,
+  .a11y-fontscale-xs-visible,
+  .a11y-fontscale-xl-visible {
     visibility: collapse;
   }
 }
 
 .a11y-fontscale-xl {
-  &.a11y-fontscale-xl-hidden,
-  &.a11y-fontscale-m-visible,
-  &.a11y-fontscale-xs-visible {
+  .a11y-fontscale-xl-hidden,
+  .a11y-fontscale-m-visible,
+  .a11y-fontscale-xs-visible {
     visibility: collapse;
   }
+}
+
+.ns-root {
+  --a11y-fontscale-factor: 1.00;
+  --const-segmented-bar-font-size: 15;
+  --const-drawer-header-font-size: 40;
+
+  --const-segmented-bar-height: 56;
+
+  --a11y-font-size: var(--const-font-size, 16);
+  --a11y-font-size-2: calc(var(--const-font-size, 16) - 2);
+  --a11y-btn-font-size: var(--const-btn-font-size, 18);
+  --a11y-icon-font-size-lg: var(--const-icon-font-size-lg);
+  --a11y-segmented-bar-font-size: var(--const-segmented-bar-font-size);
+  --a11y-segmented-bar-height: var(--const-segmented-bar-height);
+  --a11y-drawer-header-font-size: var(--const-drawer-header-font-size);
+
+  @each $text-class, $values in $a11y-font-sizes {
+    $a11y-font-size: map-get($values, font-size);
+
+    --a11y-#{$text-class}-size: #{$a11y-font-size};
+  }
+
+  @each $label-class, $values in $a11y-label-classes {
+    $a11y-font-size: map-get($values, font-size);
+
+    --a11y-#{$label-class}-size: #{$a11y-font-size};
+  }
+
+  @at-root .ns-ios {
+    --const-segmented-bar-height: 30;
+
+    --a11y-font-size: calc(var(--const-font-size, 16) * var(--a11y-fontscale-factor));
+    --a11y-font-size-2: calc(calc(var(--const-font-size, 16) - 2) * var(--a11y-fontscale-factor));
+    --a11y-btn-font-size: calc(var(--const-btn-font-size, 18) * var(--a11y-fontscale-factor));
+    --a11y-icon-font-size-lg: calc(var(--const-icon-font-size-lg) * var(--a11y-fontscale-factor));
+    --a11y-segmented-bar-font-size: calc(var(--const-segmented-bar-font-size) * var(--a11y-fontscale-factor));
+    --a11y-segmented-bar-height: calc(var(--const-segmented-bar-height) * var(--a11y-fontscale-factor));
+    --a11y-drawer-header-font-size: calc(var(--const-drawer-header-font-size) * var(--a11y-fontscale-factor));
+
+    @each $text-class, $values in $a11y-font-sizes {
+      $a11y-font-size: map-get($values, font-size);
+
+      --a11y-#{$text-class}-size: calc(#{$a11y-font-size} * var(--a11y-fontscale-factor));
+    }
+
+    @each $label-class, $values in $a11y-label-classes {
+      $a11y-font-size: map-get($values, font-size);
+
+      --a11y-#{$label-class}-size: calc(#{$a11y-font-size} * var(--a11y-fontscale-factor, 1));
+    }
+  }
+
+  font-size: var(--a11y-font-size);
+}
+
+Slider {
+  a11y-enabled: true;
+  a11y-role: adjustable;
+}
+
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
+  a11y-enabled: true;
+  a11y-role: header;
 }
