don't import nativescript-theme-core/scss/variables

--- a/src/scss/a11y-helpers.scss
+++ b/src/scss/a11y-helpers.scss
@@ -1,5 +1,4 @@
 @import './fontscales';
-@import 'nativescript-theme-core/scss/variables';
 
 .a11y-service-disabled {
   .a11y-service-enabled-visible,
@@ -46,11 +45,11 @@
 
   --const-segmented-bar-height: 56;
 
-  --a11y-font-size: var(--const-font-size, #{$font-size});
-  --const-font-size-2: calc(var(--const-font-size, #{$font-size}) - 2);
+  --a11y-font-size: var(--const-font-size);
+  --const-font-size-2: calc(var(--const-font-size) - 2);
   --a11y-font-size-2: var(----const-font-size-2);
-  --a11y-btn-font-size: var(--const-btn-font-size, #{$btn-font-size});
-  --a11y-icon-font-size-lg: var(--const-icon-font-size-lg, #{$font-size + 4});
+  --a11y-btn-font-size: var(--const-btn-font-size);
+  --a11y-icon-font-size-lg: var(--const-icon-font-size-lg);
   --a11y-segmented-bar-font-size: var(--const-segmented-bar-font-size);
   --a11y-segmented-bar-height: var(--const-segmented-bar-height);
   --a11y-drawer-header-font-size: var(--const-drawer-header-font-size);
@@ -76,10 +75,10 @@
 .ns-a11y-modal-ios {
   --const-segmented-bar-height: 30;
 
-  --a11y-font-size: calc(var(--const-font-size, #{$font-size}) * var(--a11y-fontscale-factor));
+  --a11y-font-size: calc(var(--const-font-size) * var(--a11y-fontscale-factor));
   --a11y-font-size-2: calc(var(--const-font-size-2) * var(--a11y-fontscale-factor));
-  --a11y-btn-font-size: calc(var(--const-btn-font-size, #{$btn-font-size}) * var(--a11y-fontscale-factor));
-  --a11y-icon-font-size-lg: calc(var(--const-icon-font-size-lg, #{$font-size + 4}) * var(--a11y-fontscale-factor));
+  --a11y-btn-font-size: calc(var(--const-btn-font-size) * var(--a11y-fontscale-factor));
+  --a11y-icon-font-size-lg: calc(var(--const-icon-font-size-lg) * var(--a11y-fontscale-factor));
   --a11y-segmented-bar-font-size: calc(var(--const-segmented-bar-font-size) * var(--a11y-fontscale-factor));
   --a11y-segmented-bar-height: calc(var(--const-segmented-bar-height) * var(--a11y-fontscale-factor));
   --a11y-drawer-header-font-size: calc(var(--const-drawer-header-font-size) * var(--a11y-fontscale-factor));
