backported: performance improvements
CSS-helper classes are new added by override the cssClasses-property on the view.
This remove the the need to add a global loaded-event on the views to update them.
view._onCssStateChange() are now only called on root-views and on ns-modal views,
previously we called _onCssStateChange() and all loaded views. That caused too many
updates and noticable slow downs mainly on iOS.

--- a/demo/app/home/home.component.html
+++ b/demo/app/home/home.component.html
@@ -20,9 +20,16 @@
       </StackLayout>
     </android>
   </StackLayout>
-  <ListView row="1" [items]="source" (loaded)="onLoaded($event)" (itemLoading)="onItemLoading($event)" (itemTap)="onItemTap($event)" class="list-group">
+  <ListView row="1" [items]="source" (loaded)="onLoaded($event)" (itemLoading)="onItemLoading($event)" class="list-group">
     <ng-template let-item="item" let-index="index" let-odd="odd" let-even="even">
-      <StackLayout [class.odd]="odd" [class.even]="even" accessible="true" (accessibilityFocus)="onAccessibilityFocus($event, index)" class="list-group-item">
+      <StackLayout
+        [class.odd]="odd"
+        [class.even]="even"
+        accessible="true"
+        (accessibilityFocus)="onAccessibilityFocus($event, index)"
+        class="list-group-item"
+        (tap)="onItemTap(item)"
+      >
         <Label [text]="item.name"></Label>
       </StackLayout>
     </ng-template>
