--- a/src/scss/a11y-helpers.scss
+++ b/src/scss/a11y-helpers.scss
@@ -118,3 +118,57 @@ Slider {
     --a11y-fontscale-factor: #{$a11y-fontscale-factor};
   }
 }
+
+.a11y-enabled {
+  a11y-enabled: true;
+}
+
+.a11y-btn {
+  a11y-enabled: true;
+  a11y-role: button;
+}
+
+.a11y-radiobtn {
+  a11y-enabled: true;
+  a11y-role: radiobutton;
+
+  &.a11y-checked {
+    a11y-state: checked;
+  }
+}
+
+.a11y-weblink {
+  a11y-enabled: true;
+  a11y-role: link;
+}
+
+.a11y-play-btn {
+  a11y-enabled: true;
+  a11y-role: button;
+  accessibility-traits: startsMedia;
+}
+
+.a11y-selected-play-btn {
+  a11y-enabled: true;
+  a11y-role: button;
+  accessibility-traits: selected,startsMedia;
+}
+
+.a11y-header {
+  a11y-enabled: true;
+  a11y-role: header;
+}
+
+.a11y-image {
+  a11y-enabled: true;
+  a11y-role: image;
+}
+
+.a11y-search {
+  a11y-enabled: true;
+  a11y-role: search;
+}
+
+.a11y-hidden {
+  a11y-hidden: true;
+}
