--- a/demo/src/app.scss
+++ b/demo/src/app.scss
@@ -1,3 +1,3 @@
-@import "~nativescript-theme-core/core";
-@import "~nativescript-theme-core/grey";
-@import '~@nota/nativescript-accessibility-ext/scss/a11y';
+@import '~@nativescript/theme/core.compat';
+@import '~@nativescript/theme/scss/index';
+@import url('~@nota/nativescript-accessibility-ext/a11y.css'); // <-- add this line
