minor scss update

--- a/src/scss/a11y-helpers.scss
+++ b/src/scss/a11y-helpers.scss
@@ -96,13 +96,13 @@
   }
 }
 
-Slider {
-  a11y-enabled: true;
-  a11y-role: adjustable;
-}
-
 .a11y-enabled {
   a11y-enabled: true;
+}
+
+Slider {
+  @extend .a11y-enabled;
+  a11y-role: adjustable;
 }
 
 .h1,
