fix(NOTA-6866): ListView item had their A11YDelegate removed on focus and scroll into view

--- a/src/scss/core/_controls.scss
+++ b/src/scss/core/_controls.scss
@@ -2,6 +2,8 @@
   button,
   .nt-button {
     font-size: var(--a11y-btn-font-size);
+    a11y-enabled: true;
+    a11y-role: button;
   }
 
   SegmentedBar,
@@ -102,6 +104,8 @@
 } @else {
   .btn {
     font-size: var(--a11y-btn-font-size);
+    a11y-enabled: true;
+    a11y-role: button;
   }
 
   SegmentedBar {
