fix(a11y-btn): children of .a11y-btn should be .a11y-hidden

--- a/src/scss/a11y-helpers.scss
+++ b/src/scss/a11y-helpers.scss
@@ -131,6 +131,9 @@ Slider {
 .a11y-btn {
   @extend .a11y-enabled;
   a11y-role: button;
+  > * {
+    @extend .a11y-hidden;
+  }
 }
 
 %a11y-checkable {
