feat: PageAnnounce should now give a11y-focus to action-bar

--- a/demo/src/home/home.component.html
+++ b/demo/src/home/home.component.html
@@ -1,4 +1,4 @@
-<ActionBar title="{N} accessibility demo" accessibilityLabel="{N} accessibility demo" class="action-bar"></ActionBar>
+<ActionBar title="{N} accessibility demo" class="action-bar"></ActionBar>
 
 <GridLayout class="p-b-10 p-t-10" rows="auto, auto, *" columns="*">
   <StackLayout row="0" class="c-white c-bg-grey font-weight-bold screen-reader">
