--- a/apps/demo-angular/src/app.css
+++ b/apps/demo-angular/src/app.css
@@ -1,4 +1,5 @@
 ﻿@import '~nativescript-theme-core/css/core.light.css';
+@import url('~@nota/nativescript-accessibility-ext/css/a11y.css');
 
 button,
 label,
