fix android demo

--- a/apps/demo-angular/src/app.scss
+++ b/apps/demo-angular/src/app.scss
@@ -1,5 +1,5 @@
-﻿@import '~nativescript-theme-core/css/core.light.css';
-@import url('~@nota/nativescript-accessibility-ext/css/a11y.css');
+﻿@import 'nativescript-theme-core/scss/light';
+@import 'nativescript-theme-core/scss/index';
 
 button,
 label,
